--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 <div class="col-md-6">
                     <h1>Hi, Im Marshel Agustino</h1>
                     <div class="page-scroll">
-                        <p class="job-title">I'm a Software Engineer experienced in building websites for small or
-                            medium-sized bussiness</p>
+                        <p class="job-title">I'm a Business Analyst and Software Engineer.<br><br>
+                            I offer services for the custom website development process for your business.</p>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
                     </div>
@@ -114,15 +114,10 @@
                         <div class="about">
                             <div><img class="image-pp" src="assets/img/pp.jpeg" alt=""></div>
                             <div>
-                                <p align="left">Im a Professional Software Engineer especially in <strong>Web
-                                        Development</strong>.</p>
-                                <p align="justify">I've been working on developing web-based systems with over 3 years
-                                    of
-                                    experience across various clients.
-                                    Expert on using Laravel, React.js, Node.js, Flask, Stripe API, MySQL and many more.
-                                    </br>Im confident that I can deliver a <strong>High-Quality Product</strong> that
-                                    according
-                                    clients requirements.
+                                <p align="justify">Im a <strong>Professional Software Engineer</strong> and <strong>Business analyst</strong> with over 3 years experienced.</p>
+                                <p align="justify">As a Website Developer, I offer my expertise in crafting captivating and functional websites according to your business needs.
+                                    Expert in using Laravel, React.js, Stripe API, MySQL and many more.</br>
+                                    I am disciplined in terms of time management and I can communicate well so I can deliver a <strong>High-Quality Product</strong> that according clients requirements.
                                 </p>
                             </div>
                         </div>
