--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
                         <div class="portfolio-item">
                             <img src="assets/img/porto-1.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Chuck's Cattle - Web Development</h4>
+                                <h4>Green World - Web Development</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="https://ragamrasamasakini.com/"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="https://greenworldglobal.co.id/"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -337,18 +337,18 @@
                     <img class="img-res" src="assets/img/porto-1.png" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Chuck's Cattle</h4>
-                    <p><strong>Chuck's Cattle</strong> is a restaurant website which has the tagline "Friendly Steakhouse" which means friendly. 
-                        Chuck's Cattle means someone "Chuck's" who owns a cow "Cattle" which is depicted in the logo which depicts a cow with a cowboy hat.</p>
+                    <h4 class="modal-title">Green World</h4>
+                    <p><strong>Green World</strong> is a multinational company operating in the field of herbal health products, herbal medicines and medicines. 
+                        Located in Michigan Southern California and has received recognition from the U.S. FDA agency. 
+                        Founder of Green World Group, Prof. Li Deming is a well-known entrepreneur in China who is dedicated to the fields of health and business management.</p>
                     <p>Tech Stack:</p>
                     <ul type="disc">
                         <li>Laravel</li>
                         <li>MySQL</li>
-                        <li>PHP</li>
                     </ul>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://ragamrasamasakini.com/" class="btn btn-fill">Visit Page</a>
+                    <a href="https://greenworldglobal.co.id/" class="btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
